increase table size. add box for spacing beneath map. set fixed value to search input

--- a/src/index.scss
+++ b/src/index.scss
@@ -59,8 +59,8 @@ code {
 }
 
 .leaflet-container {
-  height: 75vh;
-  width: 75vh;
+  height: 80vh;
+  width: 120vh;
   border: 2px solid #28b442; 
   border-radius: 10px; 
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
